Fixed nav/flash spacing and mailer purchase mailer subject line

--- a/app/assets/stylesheets/customStyle.scss
+++ b/app/assets/stylesheets/customStyle.scss
@@ -62,7 +62,7 @@ span>.imp{
 	color:#ec0000;
 }
 .flash{
-	padding-top: 10px;
+	padding-top: 0;
 }
 .btn-primary{
 
